@@ -249,7 +249,8 @@ Missions:
  * Portal Mind Challenge was cleaned up and reworked (especially less awful wording)
  * Fixed Target Practice missions getting stuck when a target dropped into water
  * Fixed mistakes and bad wording of strings in several missions, scripts and campaigns
- * Fixed Lua error messages and broken stats screen in Climb Home singleplayer mission
+ * Climb Home: Fix game getting stuck when a player reached home in multiplayer
+ * Climb Home: Fix Lua error messages and broken stats screen
 
 Frontend:
  + Campaign screen shows which campaigns and missions you've completed so far
